# cgame

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  asan_suppressions.txt  hexatak.data  hexatak.html  hexatak.js  hexatak.wasm  index.html
assets/: levels.txt
assets/hexatak/: levels.txt  levels.txt.wip
docs/hexatak/: levels_plan.md
docs/hexatak_classic/: levels_plan.md
docs/sokoban/: design.md
hexatak/: index.data  index.html  index.js  index.wasm
hexatak-itch/: index.data  index.js  index.wasm
hexatak_classic/: index.html  index.js  index.wasm
hexatak_classic-itch/: index.html  index.js
scripts/: build_web.sh  deploy_web.sh  generate_audio.py  serve_web.sh
sokoban/: index.data  index.html  index.js  index.wasm
src/: app.c  app.h  common.h  cute_headers_impl.c  entity.c  entity.h  main.c  world.c  world.h
src/apps/hexatak/: app.c  app.h  app_render.c  app_render.h  app_state.c  app_state.h  app_types.h  game.c  game.h  logic.c  logic.h  main.c  solver.c  solver.h
src/apps/hexatak_classic/: app.c  app_state.c  app_state.h  app_types.h  game.c  solver.h
src/apps/hexazyme/: app.c  app.h
src/apps/sokoban/: app.c  app.h
src/cgame/: common.h  cute_headers_impl.c  entity.h  game_loop.c  game_loop.h  hex.c  hex.h  world.c  world.h
src/cgame/coords/: hex.c  hex.h
src/cgame/ecs/: entity.c  entity.h  world.c  world.h
src/cgame/utils/: arena.c  arena.h  bitset.h  draw.c  draw.h  dynamic_array.h  ring_buf.h  string_view.h  vectori.h
src/utils/: arena.c  arena.h  bitset.h  dynamic_array.h  string_view.h  vectori.h
tests/: CMakeLists.txt  arena_tests.c  bitset_tests.c  dynamic_array_tests.c  entity_tests.c  string_view_tests.c  test_arena.c  test_bitset.c  test_dynamic_array.c  test_entity.c  test_hex.c  test_ring_buf.c  test_string_view.c  test_utils.h  test_world.c  world_tests.c
web/: index.html.in  minshell.html
web/hexatak/: index.html.in  itch.html  minshell.html
web/hexatak_classic/: minshell.html
web/sokoban/: minshell.html
